--- a/Ball Game/css/ball.css
+++ b/Ball Game/css/ball.css
@@ -8,6 +8,7 @@
 	position: absolute;
 	margin-top: 0px;
 	margin-left: 0px;
+	cursor: url(../img/cursor.ico), move;
 }
 
 .ball2 {
@@ -20,4 +21,5 @@
 	position: absolute;
 	margin-top: 0px;
 	margin-left: 0px;
+	cursor: url(../img/cursor.ico), move;
 }
